--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,11 +4,22 @@
     border-radius: 5px;
 
 }
-
-body{
-    text-align: -webkit-center;
+#background {
+    width:100%;
+    height:100%;
 }
-
+body {
+        background-image:url('assests/images.BEER.gif');
+        background-size:100%;
+        background-repeat: repeat-y;
+        background-attachment: fixed;
+        height:100%;
+        width:100%;
+}
+body {
+    text-align: -webkit-center;
+    
+}
 #date-picker{
     text-align: center;
     margin-bottom: 10px;
