--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,31 +2,42 @@
     padding: 0;
     margin: 0;
     border-radius: 5px;
-
 }
 
 body{
     text-align: -webkit-center;
 }
 
+#search-result{ 
+    background: #fff;
+}
+
+#search-result.active{
+    display: block;
+        
+}
+
 #date-picker{
     text-align: center;
     margin-bottom: 10px;
+    width: 100%;
 }
 
 #date-picker:hover{
     cursor: pointer;
 }
 
-
 #main-container{
     border: solid 2px;
     padding: 10px;
     margin: 10px;
     display: grid;
-    margin-top: -800px;
-    margin-left: 500px;
-    width: 30%;
+    margin-top: 300px;
+    width: 80%;
+}
+
+#search-result:hover{
+cursor: pointer;
 }
 
 .container-fluid{
@@ -35,12 +46,22 @@ body{
 
 #search{
     margin-bottom: 10px;
+    width: 100%;
+    text-align: center;
+}
+
+.button{
+    width: 100%;
 }
 
 .button:hover{
     background-color: rgb(3, 126, 28);
     color: white;
     transition: 0.3s;
+}
+
+.hide{
+    display: none !important;
 }
 
 
