--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,45 +1,48 @@
-*{
+* {
     padding: 0;
     margin: 0;
     border-radius: 5px;
 }
+
 #background {
-    width:100%;
-    height:100%;
-}
-body {
-        background-image:url('assests/images.BEER.gif');
-        background-size:100%;
-        background-repeat: repeat-y;
-        background-attachment: fixed;
-        height:100%;
-        width:100%;
-}
-body {
-    text-align: -webkit-center;
-    
+    width: 100%;
+    height: 100%;
 }
 
-#search-result{ 
+body {
+    background-image: url('assets/images.BEER.gif');
+    background-size: 100%;
+    background-repeat: repeat-y;
+    background-attachment: fixed;
+    height: 100%;
+    width: 100%;
+}
+
+body {
+    text-align: -webkit-center;
+
+}
+
+#search-result {
     background: #fff;
 }
 
-#search-result.active{
+#search-result.active {
     display: block;
-        
+
 }
 
-#date-picker{
+#date-picker {
     text-align: center;
     margin-bottom: 10px;
     width: 100%;
 }
 
-#date-picker:hover{
+#date-picker:hover {
     cursor: pointer;
 }
 
-#main-container{
+#main-container {
     border: solid 2px;
     padding: 10px;
     margin: 10px;
@@ -48,33 +51,30 @@ body {
     width: 80%;
 }
 
-#search-result:hover{
-cursor: pointer;
+#search-result:hover {
+    cursor: pointer;
 }
 
-.container-fluid{
+.container-fluid {
     padding: 0;
 }
 
-#search{
+#search {
     margin-bottom: 10px;
     width: 100%;
     text-align: center;
 }
 
-.button{
+.button {
     width: 100%;
 }
 
-.button:hover{
+.button:hover {
     background-color: rgb(3, 126, 28);
     color: white;
     transition: 0.3s;
 }
 
-.hide{
+.hide {
     display: none !important;
 }
-
-
-
