--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
     height:100%;
 }
 body {
-        background-image:url('assests/images.BEER.gif');
+        background-image:url('assets/images/BEER.gif');
         background-size:100%;
         background-repeat: repeat-y;
         background-attachment: fixed;
