--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    background-image: url('assets/images.BEER.gif');
+    background-image: url('assets/images/BEER.gif');
     background-size: 100%;
     background-repeat: repeat-y;
     background-attachment: fixed;
