--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,20 @@ body {
     color: white;
     transition: 0.3s;
 }
+/* Dropdown Button
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  /* Dropdown button on hover & focus */
+  /* .dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+  } */ */
 
 .hide {
     display: none !important;
