--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,19 +3,30 @@
     margin: 0;
     border-radius: 5px;
 }
-
+html {
+    height: 100%;
+}
 #background {
     width: 100%;
     height: 100%;
 }
 
 body {
-    background-image: url('assets/images.BEER.gif');
+    background-image: url('assets/images/BEER.gif');
     background-size: 100%;
     background-repeat: repeat-y;
     background-attachment: fixed;
     height: 100%;
     width: 100%;
+    min-height: 100%;
+}
+#sbackground {
+    opacity: .5;
+    position: relative;
+    background-size: 100%;
+    height: 100%;
+    width: 100%;
+    min-height: 100%;
 }
 
 body {
@@ -47,7 +58,7 @@ body {
     padding: 10px;
     margin: 10px;
     display: grid;
-    margin-top: 300px;
+    margin-top: -400px;
     width: 80%;
 }
 
@@ -57,6 +68,12 @@ body {
 
 .container-fluid {
     padding: 0;
+}
+ol {
+    padding: 20px;
+    background-color: beige;
+    inline-size: max-content;
+    border: solid;
 }
 
 #search {
