--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,18 @@
     border-radius: 5px;
 }
 
-#background {
+#background-beer {
     width: 100%;
     height: 100%;
+}
+
+#background-bar{
+    width: 100%;
+    height: 100%;
+}
+
+#background-container{
+    background: url('../images/barBackground.jpeg');
 }
 
 body {
@@ -16,12 +25,17 @@ body {
     background-attachment: fixed;
     height: 100%;
     width: 100%;
+}
 
+#find-button{
+    width: fit-content;
+    justify-self: center;
 }
 
 body {
     text-align: -webkit-center;
 }
+
 
 #search-result {
     background: #fff;
@@ -29,7 +43,8 @@ body {
 
 #search-result.active {
     display: block;
-
+    width: fit-content;
+    justify-self: center;
 }
 
 /* #date-picker {
@@ -61,12 +76,15 @@ body {
 
 #search {
     margin-bottom: 10px;
-    width: 100%;
+    width: 50%;
     text-align: center;
+    justify-self: center;
+    padding: 5px;
 }
 
 .button {
-    width: 100%;
+    border-radius: 5px;
+    padding: 5px;
 }
 
 .button:hover {
@@ -81,4 +99,8 @@ body {
 
 .card{
     margin: 15px;
+}
+
+#back-button{
+    margin: 15px 15px 0 15px;
 }
