--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 * {
     padding: 0;
     margin: 0;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 #background-beer {
@@ -25,11 +25,14 @@ body {
     background-attachment: fixed;
     height: 100%;
     width: 100%;
+    
 }
 
 #find-button{
     width: fit-content;
     justify-self: center;
+    font-weight: bold;
+    padding: 10px;
 }
 
 body {
@@ -69,60 +72,7 @@ body {
 #search-result:hover {
     cursor: pointer;
 }
-/* Attached css belonging to dropdown*/
-dropdown-check-list {
-    display: inline-block;
-  }
-  
-  .dropdown-check-list .anchor {
-    position: relative;
-    cursor: pointer;
-    display: inline-block;
-    padding: 5px 50px 5px 10px;
-    border: 1px solid #ccc;
-  }
-  
-  .dropdown-check-list .anchor:after {
-    position: absolute;
-    content: "";
-    border-left: 2px solid black;
-    border-top: 2px solid black;
-    padding: 5px;
-    right: 10px;
-    top: 20%;
-    -moz-transform: rotate(-135deg);
-    -ms-transform: rotate(-135deg);
-    -o-transform: rotate(-135deg);
-  -webkit-transform: rotate(-135deg);
-  transform: rotate(-135deg);
-}
 
-.dropdown-check-list .anchor:active:after {
-  right: 8px;
-  top: 21%;
-}
-
-.dropdown-check-list ul.items {
-  padding: 2px;
-  display: none;
-  margin: 0;
-  border: 1px solid #ccc;
-  border-top: none;
-}
-
-.dropdown-check-list ul.items li {
-  list-style: none;
-}
-
-.dropdown-check-list.visible .anchor {
-  color: #0094ff;
-}
-
-.dropdown-check-list.visible .items {
-  display: block;
-}
-
-/* end of attachement- dropdown*/
 .container-fluid {
     padding: 0;
 }
@@ -133,6 +83,7 @@ dropdown-check-list {
     text-align: center;
     justify-self: center;
     padding: 5px;
+    border-radius: 25px;
 }
 
 .button {
@@ -152,8 +103,35 @@ dropdown-check-list {
 
 .card{
     margin: 15px;
+    width: 100%;
+    height: 100%;
 }
 
 #back-button{
     margin: 15px 15px 0 15px;
 }
+
+.card-img-top{
+    height: -webkit-fill-available;
+}
+
+#checklist-container{
+    color: #fff;
+    background-color: #3c2f0d;
+    font-size: large;
+    width: fit-content;
+    padding: 10px;
+    margin: 10px;
+}
+
+#second-page{
+    
+}
+
+#title{
+    font-family: 'Lobster', cursive !important;
+    font-size: xx-large;
+    color: black;
+}
+
+
