--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,11 @@ body {
     height: 100%;
 }
 
+/*#card-container {
+    display: flex;
+    flex-wrap: wrap;
+}*/
+
 /* 'Go Back' Button */
 #back-button{
     margin: 5px 15px 0 15px;
