--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@
 
 /* Background Container */
 #background-container{
-    background: url('../images/barBackground.jpeg');
+    /* background: url('../images/barBackground.jpeg');  */
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -75,11 +75,12 @@ body {
 
 /* Main Container */
 #main-container {
-    border: solid 2px;
     padding: 10px;
     margin: 10px;
     display: grid;
-    margin-top: -500px;
+    /* margin-top: -650px; */
+    margin-top: -40%;
+
     width: 80%;
 }
 
@@ -164,6 +165,41 @@ body {
 
 /* City List Buttons */
 #city-list button{
-    margin-bottom: 5px
+    margin-bottom: 5px;
+    max-width: 300px;
+    overflow: hidden;
+    justify-content: flex-start;
 }
 
+@media screen and (max-width: 900px) {
+   #background-beer{
+    height: 100vh;
+   }
+
+   #main-container{
+    margin-top: -170%;
+   }
+
+   #search{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    width: 100%;
+   }
+
+   #city-list{
+    margin-top: 0%;
+   }
+
+   #search-result.active{
+    max-width: 300px;
+   }
+
+   .overflow{
+    overflow: hidden;
+   }
+
+   .container{
+    padding: 0;
+   }
+
+}
